--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>io.openliberty.guides</groupId>
-    <artifactId>guide-microprofile-rest-client</artifactId>
+    <groupId>com.keyou.test</groupId>
+    <artifactId>sia-microprofile-test-client</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
@@ -67,6 +67,26 @@
             <artifactId>javax.json</artifactId>
             <version>1.1.4</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- Imported dependencies -->
+        <dependency>
+            <groupId>com.ibm.websphere.appserver.api</groupId>
+            <artifactId>com.ibm.websphere.appserver.api.jaxrs20</artifactId>
+            <version>1.0.46</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ibm.cos</groupId>
+            <artifactId>ibm-cos-java-sdk</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>jakarta.activation</groupId>
+            <artifactId>jakarta.activation-api</artifactId>
+            <version>1.2.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
