--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,13 @@
             <version>1.2.1</version>
             <scope>compile</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.ibm.cloud</groupId>
+            <artifactId>cloudant</artifactId>
+            <version>0.0.19</version>
+        </dependency>
+
     </dependencies>
 
     <build>
