removing properties configuration file

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@
 /.classpath
 /.project
 /.settings
-
 /caches
 /local.properties
 .*.swp
@@ -13,6 +12,8 @@
 src/main/liberty/config/server.env
 src/main/resources/localdev-config.json
 
+#protect credentials properties
+microprofile-config.properties
 
 # Intellij
 .idea/
