adding microprofile config properties to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,8 @@ src/main/liberty/config/server.env
 src/main/resources/localdev-config.json
 
 #protect credentials properties
-microprofile-config.properties
+src/main/webapp/META-INF/*.properties
+src/main/webapp/META-INF/microprofile-config.properties
 
 # Intellij
 .idea/
