--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <!-- Liberty configuration -->
-        <liberty.var.default.http.port>9080</liberty.var.default.http.port>
-        <liberty.var.default.https.port>9443</liberty.var.default.https.port>
+<!--        <liberty.var.default.http.port>9080</liberty.var.default.http.port>-->
+<!--        <liberty.var.default.https.port>9443</liberty.var.default.https.port>-->
     </properties>
 
     <dependencies>
