Disable inject properties for cloudant and cos service. Fix rest client cloudantservice from cosservice

--- a/src/main/webapp/META-INF/microprofile-config.properties
+++ b/src/main/webapp/META-INF/microprofile-config.properties
@@ -7,10 +7,10 @@ cloudantClient/mp-rest/uri=http://localhost:9080/cloudant
 # end::baseUri[]
 
 # tag::cosCreds[]
-cos_apikey=https://s3-api.us-geo.objectstorage.softlayer.net
-cos_location=https://s3-api.us-geo.objectstorage.softlayer.net
+cos_apikey=2T02CI7dyGBXx01_Iwpv8qJaR5f4nSnvBFrOhEIzHaOq
+cos_location=us
 cos_endpoint=https://s3-api.us-geo.objectstorage.softlayer.net
-cos_service_instance_id=https://s3-api.us-geo.objectstorage.softlayer.net
+cos_service_instance_id=crn:v1:bluemix:public:cloud-object-storage:global:a/126e8854225c465aaa235d2ba32cb732:7e01ed21-4187-401e-bad9-b47c1ba6457e::
 # end::cosCreds[]
 
 # tag::cloudantCreds[]
