--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,10 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <resteasy.version>3.13.2.Final</resteasy.version>
-        <resteasy.client.version>4.5.8.Final</resteasy.client.version>
 
         <!-- Liberty configuration -->
-<!--        <liberty.var.default.http.port>9080</liberty.var.default.http.port>-->
-<!--        <liberty.var.default.https.port>9443</liberty.var.default.https.port>-->
+        <liberty.var.default.http.port>9080</liberty.var.default.http.port>
+        <liberty.var.default.https.port>9443</liberty.var.default.https.port>
     </properties>
 
     <dependencies>
