--- a/src/main/webapp/META-INF/microprofile-config.properties
+++ b/src/main/webapp/META-INF/microprofile-config.properties
@@ -11,6 +11,7 @@ cos_apikey=2T02CI7dyGBXx01_Iwpv8qJaR5f4nSnvBFrOhEIzHaOq
 cos_location=us
 cos_endpoint=https://s3-api.us-geo.objectstorage.softlayer.net
 cos_service_instance_id=crn:v1:bluemix:public:cloud-object-storage:global:a/126e8854225c465aaa235d2ba32cb732:7e01ed21-4187-401e-bad9-b47c1ba6457e::
+cos_bucket_name=molapi
 # end::cosCreds[]
 
 # tag::cloudantCreds[]
