--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
 applications:
- - name: moyouk
+ - name: GetStartedLiberty
 #   random-route: true
-   path: target/sia-microprofile-test-client.war
+   path: target/GetStartedLiberty.war
 #   memory: 256M
    instances: 1
