--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,6 @@
-<?xml version='1.0' encoding='utf-8'?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.keyou.test</groupId>
-    <artifactId>sia-microprofile-test-client</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,7 +13,13 @@
         <liberty.var.default.https.port>9443</liberty.var.default.https.port>
     </properties>
 
+    <groupId>com.keyou.sia</groupId>
+    <artifactId>GetStartedLiberty</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
+
     <dependencies>
+
         <!-- Provided dependencies -->
         <dependency>
             <groupId>jakarta.platform</groupId>
@@ -44,6 +42,19 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.10</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.cloudant</groupId>
+            <artifactId>cloudant-client</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
         <!-- For tests-->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -71,6 +82,7 @@
         </dependency>
 
         <!-- Imported dependencies -->
+
         <dependency>
             <groupId>com.ibm.websphere.appserver.api</groupId>
             <artifactId>com.ibm.websphere.appserver.api.jaxrs20</artifactId>
@@ -90,11 +102,6 @@
             <scope>compile</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.ibm.cloud</groupId>
-            <artifactId>cloudant</artifactId>
-            <version>0.0.19</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -116,6 +123,12 @@
                 <groupId>io.openliberty.tools</groupId>
                 <artifactId>liberty-maven-plugin</artifactId>
                 <version>3.2</version>
+                <configuration>
+                    <configFile>src/main/wlp/server.xml</configFile>
+                    <bootstrapProperties>
+                        <appLocation>../../../../../${project.build.finalName}</appLocation>
+                    </bootstrapProperties>
+                </configuration>
             </plugin>
             <!-- Plugin to run functional tests -->
             <plugin>
@@ -130,4 +143,5 @@
             </plugin>
         </plugins>
     </build>
+
 </project>
