--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </properties>
 
     <groupId>com.keyou.sia</groupId>
-    <artifactId>GetStartedLiberty</artifactId>
+    <artifactId>kevinyoutha</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
