Adding support for openAPI documentation. Added feature microProfile-3.3

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,10 @@
 ---
 applications:
- - name: siaproject
+  - name: siaproject
 #   random-route: true
-   path: target/kevinyoutha.war
+    path: target/kevinyoutha.war
 #   memory: 256M
-   instances: 1
+    instances: 1
+    env:
+      JBP_CONFIG_LIBERTY: "[version: +, app_archive: {features: [microProfile-3.3, beanValidation-2.0]}]"
+      IBM_LIBERTY_MONTHLY: true
